Use vendored fuse
It seems fuse 0.4 is not going to be released soon due to concerns about
unstable APIs. Let's just use the vendored fuse master to avoid
depending on GitHub URLs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
 name = "recordfs"
 version = "0.1.0"
-edition = "2018"
 authors = ["Jun Wu <quark@lihdd.net>"]
 edition = "2018"
 license = "MIT"
@@ -10,11 +9,11 @@ keywords = ["fuse"]
 repository = "https://github.com/quark-zju/recordfs"
 categories = ["filesystem"]
 readme = "README.md"
+build = "build.rs"
 
 [dependencies]
 byteorder = "1"
 env_logger = "0.7"
-fuse = { git = "https://github.com/zargony/rust-fuse", rev = "42e29d964e2b24e32e21b179b77e4d0d0a0857ac" }
 libc = "0.2"
 log = "0.4"
 rand = "0.7"
@@ -24,3 +23,10 @@ shell-words = "1"
 structopt = { version = "0.3", default-features = false }
 tempfile = "3"
 varbincode = "0.1"
+
+# fuse
+thread-scoped = "1.0.2"
+
+# fuse-sys
+[build-dependencies]
+pkg-config = "0.3.14"
