Rename away vendored Cargo.tomls
`cargo publish --dry-run` excludes directories with `Cargo.toml`.
Rename them so `cargo publish` can include the vendored files.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ keywords = ["fuse", "testing"]
 repository = "https://github.com/quark-zju/outagefs"
 categories = ["filesystem"]
 readme = "README.md"
-build = "build.rs"
+build = "vendor/fuse/fuse-sys/build.rs"
+include = [
+  "Cargo.toml",
+  "src/**/*.rs",
+  "vendor/**/*.rs",
+]
 
 [dependencies]
 byteorder = "1"
